--- a/Exam/Exam/Areas/Manage/Views/Client/Index.cshtml
+++ b/Exam/Exam/Areas/Manage/Views/Client/Index.cshtml
@@ -11,7 +11,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Client Table</h4>
-                        <a class="btn btn-success">Create</a>
+                        <a asp-controller="Client" asp-action="Create" class="btn btn-success">Create</a>
 
                         <div class="table-responsive">
                             <table class="table table-striped">
@@ -58,8 +58,8 @@
                                                 @client.City
                                             </td>
                                             <td>
-                                                <a class="btn btn-warning">Update</a>
-                                                <a class="btn btn-danger">Delete</a>
+                                                <a asp-controller="Client" asp-action="Update" asp-route-id="@client.Id" class="btn btn-warning">Update</a>
+                                                <a asp-controller="Client" asp-action="Delete" asp-route-id="@client.Id" class="btn btn-danger">Delete</a>
                                             </td>
                                         </tr>
                                     }
