--- a/Exam/Exam/Areas/Manage/Views/Client/Update.cshtml
+++ b/Exam/Exam/Areas/Manage/Views/Client/Update.cshtml
@@ -10,8 +10,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Update Client</h4>
                         <form class="forms-sample" method="post" enctype="multipart/form-data">
-                            <img src="~/assets/images/@Model.Image" typeof="hidden"  value="@Model.Image"/>
-
+                            <img src="~/assets/images/@Model.Image"  />
+                                <input asp-for="Image" type="hidden" class="form-control"  value="@Model.Image">
                             <div class="form-group">
                                 <label asp-for="Photo">Photo</label>
                                 <input asp-for="Photo" class="form-control" placeholder="Photo">
@@ -32,6 +32,7 @@
                                 <input asp-for="City" class="form-control" placeholder="City">
                                 <span asp-validation-for="City"></span>
                             </div>
+                            
                             <button type="submit" class="btn btn-primary mr-2">Submit</button>
                             <button class="btn btn-light">Cancel</button>
                         </form>
